--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="images/logochico.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BeQubo</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Bequbo</title>
+    <meta name="description" content="Desarrollos y proyectos de Bequbo." />
+    <meta name="theme-color" content="#111111" />
   </head>
   <body>
     <div id="root"></div>
